--- a/index.html
+++ b/index.html
@@ -260,6 +260,8 @@ developers.forEach(dev => {
                 'Japan': 'JP',
                 'China': 'CN',
                 'India': 'IN',
+                'USA': 'US',
+                'Israel: 'IL',
                 // Add more mappings here based on your data
                 'Unknown': 'UN'
             };
