--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ developers.forEach(dev => {
                 'China': 'CN',
                 'India': 'IN',
                 'USA': 'US',
-                'Israel: 'IL',
+                'Israel': 'IL',
                 // Add more mappings here based on your data
                 'Unknown': 'UN'
             };
